# Interview-feedback

./: .gitignore  CLAUDE.md  README.md  Task.md
.github/workflows/: ci.yml  release-desktop-commercial.yml  release-desktop.yml
cloudflare/tunnel/: config.example.yml
desktop/: .env.example  .env.opensource  .env.production  README.md  e2e_dual_stream_test.mjs  e2e_group_interview_test.mjs  electron-builder.yml  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/lib/: audioPipeline.js  diarizationSidecar.js  googleCalendar.js  graphCalendar.js  liveMetrics.js  pyannoteWindowBuilder.js  teamsWindowTracker.js  (+1 more)
desktop/sidecar/pyannote-rs-server/: Cargo.toml
desktop/sidecar/pyannote-rs-server/src/: main.rs
docs/: providers.md  release-metrics-v0.2.0.md
inference/: .env.example  .env.production  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  requirements.txt
samples/: Alice.m4a  Bob.m4a  README.md
scripts/: backfill_asr_session.py  cloudflare_tunnel_bootstrap.sh  cloudflare_tunnel_run.sh  cloudflare_worker_bootstrap.sh  create_smoke_samples.sh  download_sv_model.sh  edge_e2e_diarization.mjs  export_r2_session_audio.mjs  finalize_resilience_regression.mjs  prepare_samples.sh  quality_gate_regression.mjs  smoke_asr_worker.py  smoke_caption_session.mjs  smoke_cluster_map_validation.mjs  smoke_finalize_v2.mjs  smoke_realtime_replay_cursor.mjs  smoke_sv.py  smoke_synthesize.mjs  speechmatics_rt_validate.mjs  validate_samples.sh  ws_ingest_smoke.mjs
(+448 files in other folders)
