[package]
name = "pyannote-rs-server"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[[bin]]
name = "pyannote-rs"
path = "src/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
pyannote-rs = "0.3.4"
ort = "=2.0.0-rc.10"
ort-sys = "=2.0.0-rc.10"
ndarray = "=0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "net"] }
